@@ -1,4 +1,5 @@
 5.0-alpha2
+ * Remove commons-codec dependency (CASSANDRA-18772)
 Merged from 4.1:
 Merged from 4.0:
 Merged from 3.11:
